--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -1,5 +1,5 @@
 25/01/2016
-- journals: jcgs, tvgs, comp. stats, econometrics
+- journals: jcgs, tvcg, comp. stats, econometrics
 - subfigured
 - titles of graphics
 - supplementary
