--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -1,7 +1,7 @@
 25/01/2016
 - journals: jcgs, tvcg, comp. stats, econometrics
-- subfigured
-- titles of graphics
+*- subfigured
+*- titles of graphics
 - supplementary
 
 11/01/2016
