--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -210,15 +210,29 @@ Temporal dependence is present in many macroeconomic variables \citep{Nelson, Pe
 
 \begin{figure}[htbp]
   \centering
-    \centerline{\includegraphics[width=0.45\textwidth]{nzdscatter}
-    \includegraphics[width=0.45\textwidth]{nzdline}}
+    \centerline{\begin{subfigure}[width=0.45\textwidth]
+    <<nzd, error=FALSE, message=FALSE, warning=FALSE, echo=FALSE>>=
+    rates <- select(read.csv("rates.csv"), date, AUD, CNY, NZD)[36:69,]
+    rates <- mutate(rates, AUD2=(AUD-mean(AUD))/sd(AUD), CNY2=(CNY-mean(CNY))/sd(CNY)) #scaling
+    ggplot(data=rates, aes(x=AUD, y=NZD)) + geom_point()
+    @
+    \end{subfigure}
+    }
+    \begin{subfigure}[width=0.45\textwidth]
+    <<nzd2, dependson='nzd', error=FALSE, message=FALSE, warning=FALSE, echo=FALSE>>=
+    rates_l <- gather(rates, currency, value, -date)
+    ggplot(data=subset(rates_l, currency != "CNY" & currency != "CNY2" & currency != "AUD2"), aes(x=as.Date(date), y=value, colour=currency)) + geom_line()
+    @
+    \end{subfigure}
   \caption{Cross-rates for Australian and NZ dollars against US dollar, from Mar 30-May 2, 2015, shown using a scatterplot (left) and overlaid line graph (right). From which plot is correlation more accurately read? Point-wise correlation between the two series, ignoring autodependence, is 0.64.}
   \label{nzd}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[width=0.5\textwidth][htbp]
   \centering
-  \includegraphics[width=0.5\textwidth]{cnyline}
+  <<cny, dependson='nzd2', error=FALSE, message=FALSE, warning=FALSE, echo=FALSE>>=
+   ggplot(data=subset(rates_l, currency != "NZD" & currency != "CNY" & currency != "AUD"), aes(x=as.Date(date), y=value, colour=currency)) + geom_line() 
+  @
   \caption{Cross-rates for Australian dollar and Chinese yuan against the United States dollar from Mar 30-May 2, 2015, shown as overlaid line graph. (Both sets of values were standardized to bring them to the same scale for plotting.) What would you report the correlation between the two series to be?}
   \label{cny}
 \end{figure}
