--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -1,3 +1,10 @@
+1/2/2016
+- Decide on journals
+- Clean language/typos/references in first 4 pages
+- Create a turk code folder, clean code, upload to git
+- Acknowledge NSF, reproducibility details
+- Cite software used
+
 25/01/2016
 - journals: jcgs, tvcg, comp. stats, econometrics
 *- subfigured
